--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,34 @@
 {
     "name": "onfido/api-php-client",
-    "version": "1.6.0",
-    "description": "",
+    "version": "2.0.0",
+    "description": "The Onfido API is used to submit check requests.",
     "keywords": [
-        "swagger",
+        "openapitools",
+        "openapi-generator",
         "php",
         "sdk",
+        "rest",
         "api"
     ],
-    "homepage": "http://swagger.io",
-    "license": "Apache-2.0",
+    "homepage": "http://openapi-generator.tech",
+    "license": "proprietary",
     "authors": [
         {
-            "name": "Swagger and contributors",
-            "homepage": "https://github.com/swagger-api/swagger-codegen"
+            "name": "OpenAPI-Generator contributors",
+            "homepage": "https://openapi-generator.tech"
         }
     ],
     "require": {
-        "php": ">=5.4",
+        "php": ">=7.1",
         "ext-curl": "*",
         "ext-json": "*",
-        "ext-mbstring": "*"
+        "ext-mbstring": "*",
+        "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.8",
-        "satooshi/php-coveralls": "~1.0",
+        "phpunit/phpunit": "^7.4",
         "squizlabs/php_codesniffer": "~2.6",
-        "friendsofphp/php-cs-fixer": "~1.12"
+        "friendsofphp/php-cs-fixer": "~2.12"
     },
     "autoload": {
         "psr-4": { "Onfido\\" : "lib/" }
