--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "ext-curl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "guzzlehttp/guzzle": "^6.2 || ^7.0.0"
+        "guzzlehttp/guzzle": "^6.2 || ^7.0.0",
+        "guzzlehttp/psr7": "^1.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.4",
