--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "onfido/api-php-client",
-    "version": "5.2.0",
+    "name": "bdelespierre/onfido-api-php-client",
+    "version": "5.2.1",
     "description": "The Onfido API is used to submit check requests.",
     "keywords": [
         "openapitools",
@@ -20,17 +20,18 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
+        "php": ">=7.1||>=8.0",
         "ext-curl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "guzzlehttp/guzzle": "^6.2 || ^7.0.0",
-        "guzzlehttp/psr7": "^1.7"
+        "guzzlehttp/guzzle": "^7.4.0",
+        "guzzlehttp/psr7": "^2.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.4",
+        "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "~2.6",
-        "friendsofphp/php-cs-fixer": "~2.12"
+        "friendsofphp/php-cs-fixer": "~2.12",
+        "phpstan/phpstan": "^1.2"
     },
     "autoload": {
         "psr-4": { "Onfido\\" : "lib/" }
