--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -27,20 +27,36 @@ jobs:
         php-version: ["8.3"]
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up PHP ${{ matrix.php-version }}
-      uses: php-actions/composer@v6
-      with:
-        php_version: ${{ matrix.php-version }}
-    - name: Test with phpunit
-      if: ${{ github.event.pull_request.head.repo.full_name == github.repository &&
-              github.actor != 'dependabot[bot]' }}
-      run: |
-        vendor/bin/phpunit
-      env:
-        ONFIDO_API_TOKEN: ${{ secrets.ONFIDO_API_TOKEN }}
-        ONFIDO_SAMPLE_APPLICANT_ID: ${{ secrets.ONFIDO_SAMPLE_APPLICANT_ID }}
-        ONFIDO_SAMPLE_VIDEO_ID_1: ${{ secrets.ONFIDO_SAMPLE_VIDEO_ID_1 }}
-        ONFIDO_SAMPLE_VIDEO_ID_2: ${{ secrets.ONFIDO_SAMPLE_VIDEO_ID_2 }}
-        ONFIDO_SAMPLE_MOTION_ID_1: ${{ secrets.ONFIDO_SAMPLE_MOTION_ID_1 }}
-        ONFIDO_SAMPLE_MOTION_ID_2: ${{ secrets.ONFIDO_SAMPLE_MOTION_ID_2 }}
+      - uses: actions/checkout@v4
+      - name: Set up PHP ${{ matrix.php-version }}
+        uses: php-actions/composer@v6
+        with:
+          php_version: ${{ matrix.php-version }}
+      - name: Test with phpunit
+        if: ${{ github.event.pull_request.head.repo.full_name == github.repository &&
+                github.actor != 'dependabot[bot]' }}
+        run: |
+          vendor/bin/phpunit
+        env:
+          ONFIDO_API_TOKEN: ${{ secrets.ONFIDO_API_TOKEN }}
+          ONFIDO_SAMPLE_APPLICANT_ID: ${{ secrets.ONFIDO_SAMPLE_APPLICANT_ID }}
+          ONFIDO_SAMPLE_VIDEO_ID_1: ${{ secrets.ONFIDO_SAMPLE_VIDEO_ID_1 }}
+          ONFIDO_SAMPLE_VIDEO_ID_2: ${{ secrets.ONFIDO_SAMPLE_VIDEO_ID_2 }}
+          ONFIDO_SAMPLE_MOTION_ID_1: ${{ secrets.ONFIDO_SAMPLE_MOTION_ID_1 }}
+          ONFIDO_SAMPLE_MOTION_ID_2: ${{ secrets.ONFIDO_SAMPLE_MOTION_ID_2 }}
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: integration-tests
+    if: github.event_name == 'release'
+    environment: delivery
+    steps:
+      - name: Notify packagist.org about the new package
+        run: |
+          curl -XPOST -H'content-type:application/json' \
+            "https://packagist.org/api/update-package?username=${PACKAGIST_API_USER}&apiToken=${PACKAGIST_API_TOKEN}" \
+            -d'{"repository":{"url":"${{ github.server_url }}/${{ github.repository }}"}}'
+    env:
+      PACKAGIST_API_USER: ${{ secrets.PACKAGIST_API_USER }}
+      PACKAGIST_API_TOKEN: ${{ secrets.PACKAGIST_API_TOKEN }}
+
