Fix CHANGELOG and improve CI and tests

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -33,8 +33,7 @@ jobs:
         with:
           php_version: ${{ matrix.php-version }}
       - name: Test with phpunit
-        if: ${{ github.event.pull_request.head.repo.full_name == github.repository &&
-                github.actor != 'dependabot[bot]' }}
+        if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
         run: |
           vendor/bin/phpunit
         env:
@@ -48,15 +47,47 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: integration-tests
-    if: github.event_name == 'release'
     environment: delivery
+    if: github.event_name == 'release'
     steps:
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_ACTION_ACCESS_TOKEN }}
       - name: Notify packagist.org about the new package
         run: |
           curl -XPOST -H'content-type:application/json' \
             "https://packagist.org/api/update-package?username=${PACKAGIST_API_USER}&apiToken=${PACKAGIST_API_TOKEN}" \
             -d'{"repository":{"url":"${{ github.server_url }}/${{ github.repository }}"}}'
-    env:
-      PACKAGIST_API_USER: ${{ secrets.PACKAGIST_API_USER }}
-      PACKAGIST_API_TOKEN: ${{ secrets.PACKAGIST_API_TOKEN }}
+        env:
+          PACKAGIST_API_USER: ${{ secrets.PACKAGIST_API_USER }}
+          PACKAGIST_API_TOKEN: ${{ secrets.PACKAGIST_API_TOKEN }}
+
+      - name: Update CHANGELOG.md
+        run: |
+          TMP_FILE=$(mktemp)
+
+          RELEASE_VERSION=$(jq -r '.release' .release.json)
+          RELEASE_DATE=`date +'%dth %B %Y' | sed -E 's/^0//;s/^([2,3]?)1th/\11st/;s/^([2]?)2th/\12nd/;s/^([2]?)3th/\13rd/'`
+
+          SPEC_COMMIT_SHA=$(jq -r '.source.short_sha' .release.json)
+          SPEC_COMMIT_URL=$(jq -r '.source.repo_url + "/commit/" + .source.long_sha' .release.json)
+          SPEC_RELEASE_VERSION=$(jq -r '.source.version' .release.json)
+          SPEC_RELEASE_URL=$(jq -r '.source.repo_url + "/releases/tag/" + .source.version' .release.json)
+
+          echo -e "# Changelog\n\n## $RELEASE_VERSION $RELEASE_DATE\n\n" >| $TMP_FILE
+          echo -en "${{ github.event.release.body }}\nBased on Onfido OpenAPI spec " >> $TMP_FILE
+
+          if [ -z $SPEC_RELEASE_VERSION ]; then
+            echo "up to commit [$SPEC_COMMIT_SHA](${SPEC_COMMIT_URL})." >> $TMP_FILE
+          else
+            echo "version [$SPEC_RELEASE_VERSION](${SPEC_RELEASE_URL})." >> $TMP_FILE
+          fi
+
+          grep -v "^# Changelog" CHANGELOG.md >> $TMP_FILE
+          mv $TMP_FILE CHANGELOG.md
+
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+          git commit -m "Update CHANGELOG.md after library release" CHANGELOG.md
+          git push
 
