--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -47,9 +47,15 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: integration-tests
-    if: github.event_name == 'release'
     environment: delivery
+    if: github.event_name == 'release'
     steps:
+      - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_ACTION_ACCESS_TOKEN }}
+          ref: master
+      - name: Validate release
+        uses: onfido/onfido-actions/release-check@main
       - name: Notify packagist.org about the new package
         run: |
           curl -XPOST -H'content-type:application/json' \
@@ -58,4 +64,5 @@ jobs:
         env:
           PACKAGIST_API_USER: ${{ secrets.PACKAGIST_API_USER }}
           PACKAGIST_API_TOKEN: ${{ secrets.PACKAGIST_API_TOKEN }}
-
+      - name: Update and commit CHANGELOG.md
+        uses: onfido/onfido-actions/update-changelog@main
