--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -33,7 +33,8 @@ jobs:
         with:
           php_version: ${{ matrix.php-version }}
       - name: Test with phpunit
-        if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
+        if: ${{ matrix.php-version == '8.3' &&
+                github.repository_owner == 'onfido' }}
         run: |
           vendor/bin/phpunit
         env:
