Add schedule to CI, fix and improve tests after library refresh

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -18,6 +18,8 @@ on:
   release:
     types:
       - published
+  schedule:
+    - cron: "0 15 * * 0"   # Every Sunday, 3 hours after midday
 
 jobs:
   integration-tests:
