--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -36,7 +36,8 @@ jobs:
           php_version: ${{ matrix.php-version }}
       - name: Test with phpunit
         if: ${{ matrix.php-version == '8.3' &&
-                github.repository_owner == 'onfido' }}
+          github.repository_owner == 'onfido' &&
+          (github.event_name == 'pull_request' || github.event_name == 'release') }}
         run: |
           vendor/bin/phpunit
         env:
