Update MIGRATION.md for v10.x and fix CI workflow

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -40,7 +40,9 @@ jobs:
       - name: Test with phpunit
         if: ${{ matrix.php-version == '8.3' &&
           github.repository_owner == 'onfido' &&
-          (github.event_name == 'pull_request' || github.event_name == 'release') }}
+          (github.event_name == 'pull_request' ||
+           github.event_name == 'release' ||
+           github.event_name == 'workflow_dispatch') }}
         run: |
           vendor/bin/phpunit
         env:
